<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_sort_by"
        android:title="@string/menu_sort_by"
        android:icon="@drawable/ic_baseline_sort_24px"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/menu_popular"
                android:title="@string/menu_popular">
            </item>

            <item
                android:id="@+id/menu_ratings"
                android:title="@string/menu_ratings">
            </item>
            <item
                android:id="@+id/menu_favorites"
                android:title="@string/menu_favorites">
            </item>

        </menu>
    </item>



    <item
        android:id="@+id/menu_clear_favorites"
        android:title="@string/menu_clear_favorites">

    </item>


</menu>