<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:isScrollContainer="true"
    tools:context=".DetailsActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        android:isScrollContainer="true">

        <ImageView
            android:contentDescription="@string/image_description_movie_banner"
            android:id="@+id/iv_details_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_details_title"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_details_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/label_release_data"
            app:layout_constraintStart_toEndOf="@+id/label_release_data"
            app:layout_constraintTop_toTopOf="@+id/label_release_data" />

        <TextView
            android:id="@+id/tv_details_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/label_rating"
            app:layout_constraintStart_toEndOf="@+id/label_rating"
            app:layout_constraintTop_toTopOf="@+id/label_rating" />

        <TextView
            android:id="@+id/tv_details_synopsys"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:background="@android:color/background_dark"
            android:scrollbars="vertical"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_synopsys" />

        <TextView
            android:id="@+id/label_release_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/label_release_date"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/label_rating"
            app:layout_constraintStart_toEndOf="@+id/iv_details_poster" />

        <TextView
            android:id="@+id/label_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_rating"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/iv_details_poster"
            app:layout_constraintStart_toStartOf="@+id/label_release_data" />

        <TextView
            android:id="@+id/label_synopsys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_synopsys"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/iv_details_poster"
            app:layout_constraintTop_toBottomOf="@+id/iv_details_poster" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>